force-app/main/default/objects/outfunds__Funding_Program__c/outfunds__Funding_Program__c.object-meta.xml
<CustomObject>
    <label>Funding Program</label>
    <nameField>
        <label>Funding Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>