force-app/main/default/objects/outfunds__Funding_Program__c/fields/Application_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Due_Date__c</fullName>
    <label>Application Due Date</label>
    <type>DateTime</type>
</CustomField>