force-app/main/default/objects/outfunds__Funding_Program__c/fields/Funding_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program_Number__c</fullName>
    <displayFormat>FP-{00000000}</displayFormat>
    <label>Funding Program Number</label>
    <type>AutoNumber</type>
</CustomField>