force-app/main/default/objects/outfunds__Funding_Program__c/fields/Maximum_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Grant_Amount__c</fullName>
    <label>Maximum Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>