force-app/main/default/objects/outfunds__Funding_Program__c/fields/Minimum_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Grant_Amount__c</fullName>
    <label>Minimum Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>