force-app/main/default/objects/outfunds__Funding_Program__c/fields/outfunds__Description__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>