force-app/main/default/objects/outfunds__Funding_Program__c/fields/outfunds__End_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>