force-app/main/default/objects/outfunds__Funding_Program__c/fields/outfunds__Funding_Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Funding_Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This person is the supervisor/director/manager of the Funding Program. Often, they are also the final approver of Funding Requests.</inlineHelpText>
    <label>Funding Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>