force-app/main/default/objects/outfunds__Funding_Program__c/fields/outfunds__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>