force-app/main/default/objects/outfunds__Funding_Program__c/fields/outfunds__Total_Program_Amount__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Total_Program_Amount__c</fullName>
    <description>Total amount of fund available in this program</description>
    <label>Total Program Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>