force-app/main/default/objects/outfunds__Funding_Program__c/fields/Question_and_Answer_Period_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Question_and_Answer_Period_Close_Date__c</fullName>
    <label>Question and Answer Period Close Date</label>
    <type>DateTime</type>
</CustomField>