force-app/main/default/objects/outfunds__Funding_Program__c/fields/sfdo_grants__ApplicationForm__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__ApplicationForm__c</fullName>
    <description>List of flows that can be selected to launch a new application (Funding Request) from a Funding Program.</description>
    <inlineHelpText>Select a flow to use when creating a new application (Funding Request) for this Funding Program.</inlineHelpText>
    <label>Application Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GrantsManagementMultiSectionApplicationFormSample</fullName>
                <label>Grants Management: Multi-Section Application Form (Sample)</label>
            </value>
            <value>
                <fullName>GrantsManagementCreateApplication</fullName>
                <label>Create Application</label>
            </value>
            <value>
                <fullName>GrantsManagementEnhancedApplicationSample</fullName>
                <label>Grants Management: Enhanced Application (Sample)</label>
            </value>
            <value>
                <fullName>GrantsManagementMultiStageApplicationSample</fullName>
                <isActive>false</isActive>
                <label>GrantsManagementMultiStageApplicationSample</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>