force-app/main/default/objects/outfunds__Funding_Program__c/listViews/outfunds__All.listView-meta.xml
<ListView>
    <fullName>outfunds__All</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Funding_Program_Manager__c</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__Start_Date__c</columns>
    <columns>outfunds__End_Date__c</columns>
    <columns>outfunds__Total_Program_Amount__c</columns>
    <columns>outfunds__Top_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>