force-app/main/default/objects/outfunds__Funding_Program__c/listViews/outfunds__Open_Funding_Programs.listView-meta.xml
<ListView>
    <fullName>outfunds__Open_Funding_Programs</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Funding_Program_Manager__c</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__Start_Date__c</columns>
    <columns>outfunds__End_Date__c</columns>
    <columns>outfunds__Total_Program_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>outfunds__Status__c</field>
        <operation>equals</operation>
        <value>In progress</value>
    </filters>
    <label>Open Funding Programs</label>
</ListView>