force-app/main/default/objects/outfunds__Funding_Program__c/listViews/sfdo_grants__Community_Available_Funding_Programs.listView-meta.xml
<ListView>
    <fullName>sfdo_grants__Community_Available_Funding_Programs</fullName>
    <columns>NAME</columns>
    <columns>outfunds__End_Date__c</columns>
    <columns>outfunds__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>outfunds__Status__c</field>
        <operation>equals</operation>
        <value>In progress</value>
    </filters>
    <label>Available Funding Programs</label>
</ListView>